services/netalertx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: netalertx
  name: netalertx
  namespace: netalertx
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: netalertx
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: netalertx
    spec:
      containers:
      - env:
        - name: PORT
          value: '20211'
        - name: TZ
          value: Asia/Hong_Kong
        - name: APP_CONF_OVERRIDE
          value: '{"GRAPHQL_PORT":"20214"}'
        image: ghcr.io/netalertx/netalertx:26.6.3
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 20211
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        name: netalertx
        ports:
        - containerPort: 20211
          name: web
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 20211
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 500m
            memory: 768Mi
          requests:
            cpu: 100m
            memory: 256Mi
        securityContext:
          capabilities:
            add:
            - NET_RAW
            - NET_ADMIN
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /tmp
          name: tmp
        - mountPath: /etc/localtime
          name: localtime
          readOnly: true
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      nodeSelector:
        kubernetes.io/hostname: homelab03
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 20211
        runAsGroup: 20211
        runAsUser: 20211
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: netalertx-data
      - emptyDir:
          medium: Memory
        name: tmp
      - hostPath:
          path: /etc/localtime
          type: File
        name: localtime
