services/netalertx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: authelia-add-https@kubernetescrd,authelia-authelia-forwardauth@kubernetescrd
  name: netalertx
  namespace: netalertx
spec:
  ingressClassName: traefik
  rules:
  - host: netalertx.homelab.local
    http:
      paths:
      - backend:
          service:
            name: netalertx
            port:
              number: 20211
        path: /
        pathType: Prefix
  - host: netalertx.completeautomate.com
    http:
      paths:
      - backend:
          service:
            name: netalertx
            port:
              number: 20211
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - netalertx.homelab.local
    - netalertx.completeautomate.com
